--- a/deployments/mysql/dev/secret.yaml
+++ b/deployments/mysql/dev/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: mysql
+  namespace: mysql-dev
 type: Opaque
 data:
   mysql-root-password: cGFzc3dvcmQ= # Base64-encoded 'password'
