--- a/deployments/mysql/dev/service.yaml
+++ b/deployments/mysql/dev/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
-  namespace: mysql
+  namespace: mysql-dev
 spec:
   clusterIP: None
   selector:
