adjust volume claim to volumeClaimTemplates

--- a/deployments/mysql/dev/statefulSet.yaml
+++ b/deployments/mysql/dev/statefulSet.yaml
@@ -84,8 +84,11 @@ spec:
           volumeMounts:
             - name: mysql-data
               mountPath: /var/lib/mysql
-
-      volumes:
-        - name: mysql-data
-          persistentVolumeClaim:
-            claimName: mysql-pvc-$(MY_POD_NAME)
+  volumeClaimTemplates:
+    - metadata:
+        name: mysql-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 10Gi
