--- a/deployments/mysql/dev/statefulSet.yaml
+++ b/deployments/mysql/dev/statefulSet.yaml
@@ -90,6 +90,22 @@ spec:
           volumeMounts:
             - name: mysql-data
               mountPath: /var/lib/mysql
+          readinessProbe:
+          exec:
+            command: ["mysqladmin", "ping", "-uroot", "-p$MYSQL_ROOT_PASSWORD"]
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 10
+
+        livenessProbe:
+          exec:
+            command: ["mysqladmin", "ping", "-uroot", "-p$MYSQL_ROOT_PASSWORD"]
+          initialDelaySeconds: 30
+          periodSeconds: 20
+          timeoutSeconds: 5
+          failureThreshold: 5
+
   volumeClaimTemplates:
     - metadata:
         name: mysql-data
